--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.5;
-        }
-        ul {
-            list-style-type: disc;
-            margin-left: 20px;
-        }
     </style>
        </head>
  
@@ -53,7 +48,7 @@
 
 <p><a href=http://unicesumar.edu.br>UniCesumar</a> (Concluídos em 05/25)</p>
 <! Início dos Marcadores>
-    <ul>
+    <ul type=circle>
         <li>Logística e Distribuição - Carga horária: 12h
         <li>Gestão de Pessoas - Carga horária: 10h
         <li>Desenvolvimento de Sistemas Web - Carga horária: 10h
