--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
  <p><a href=https://portal.uniasselvi.com.br>UNIASSELVI</a> (Concluídos em 05/25)</p>
  
  <! Início dos Marcadores>
-<ul>
-        <li type=disc>Assistente Administrativo - Carga horária: 12
+<ul type=circle>
+        <li>Assistente Administrativo - Carga horária: 12
         <li>Gestão de Estoque - Carga horária: 10h
         <li>Empreendedorismo - Carga horária: 12h
         <li>Relacionamento com o Mercado - Carga horária: 10h
