--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <html>
 <head>
-<title>Currículo</title>
+<title>Curriculum Vitae</title>
     <style>
         body {
             font-family: Arial, sans-serif;
