--- a/index.html
+++ b/index.html
@@ -15,22 +15,13 @@
  
        <body>
 <h2 align=center>Deivid Almeida da Conceição</h2>
-         <nav align=left>
-        <ul>
-            <li><a href="#sobre">Sobre Mim</a></li>
-            <li><a href="#experiencia">Experiência</a></li>
-            <li><a href="#educacao">Educação</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </ul>
-    </nav>
 <h4>Dados Pessoais</h4>
 <p> Endereço: Santa Terezinha, Alagoinhas - BA <br>Telefone: <a href=https://wa.me/5575982231992>+55 (75) 9 8223-1992</a> <br>E-mail: <a href="mailto:adm.deividalmeida@gmail.com">adm.deividalmeida@gmail.com </a>
-
+</p></section>
 <hr>
 <h4>Objetivo Profissional</h4>
 <p>Graduando em Administração, buscando oportunidades para atuar e adquirir experiência na área, comprometido a contribuir de forma positiva com as metas e resultados da empresa.</p>
-<hr>
-        
+<hr>      
 <h4>Formação Acadêmica</h4>
 <p>Bacharelado em Administração - <a href=http://ifbaiano.edu.br>Instituto Federal de Educação, Ciência e Tecnologia Baiano (IF Baiano)</a> - Conclusão Prevista: 2028</p>
 <hr>
