--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  
        <body>
 <h1 align=center>Deivid Almeida da Conceição</h1>
+        <img src=ft.jpeg align=right>
 <h4>Dados Pessoais</h4>
 <p> Endereço: Santa Terezinha, Alagoinhas - BA <br>Telefone: <a href=https://wa.me/5575982231992>+55 (75) 9 8223-1992</a> <br>E-mail: <a href="mailto:adm.deividalmeida@gmail.com">adm.deividalmeida@gmail.com </a>
 </p></section>
@@ -23,7 +24,7 @@
 <p>Graduando em Administração, buscando oportunidades para atuar e adquirir experiência na área, comprometido a contribuir de forma positiva com as metas e resultados da empresa.</p>
 <hr>      
 <h4>Formação Acadêmica</h4>
-<p>Bacharelado em Administração - <a href=http://ifbaiano.edu.br>Instituto Federal de Educação, Ciência e Tecnologia Baiano (IF Baiano)</a> - Conclusão Prevista: 2028</p>
+<p>Bacharelado em Administração (Cursando) - <a href=http://ifbaiano.edu.br>Instituto Federal de Educação, Ciência e Tecnologia Baiano (IF Baiano)</a> - Conclusão Prevista: 2028</p>
 <hr>
         
 <h4>Habilidades e Competências</h4>
