--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <! Início do Corpo da Página>
  
        <body>
-        <img src=ft.jpeg width="13%" align=right>
+        <img src=ft.jpeg width="12%" align=right>
 <h1 align=center>Deivid Almeida da Conceição</h1>
 <h4>Dados Pessoais</h4>
 <p> Endereço: Santa Terezinha, Alagoinhas - BA <br>Telefone: <a href=https://wa.me/5575982231992>+55 (75) 9 8223-1992</a> <br>E-mail: <a href="mailto:adm.deividalmeida@gmail.com">adm.deividalmeida@gmail.com </a>
-</p></section>
+</p>
 <hr>
 <h4>Objetivo Profissional</h4>
 <p>Graduando em Administração, buscando oportunidades para atuar e adquirir experiência na área, comprometido a contribuir de forma positiva com as metas e resultados da empresa.</p>
 <hr>      
 <h4>Formação Acadêmica</h4>
-<p>Bacharelado em Administração (Cursando) - <a href=http://ifbaiano.edu.br>Instituto Federal de Educação, Ciência e Tecnologia Baiano (IF Baiano)</a> - Conclusão Prevista: 2028</p>
+<p>Bacharelado em Administração (Cursando) - <abbr title="Instituto Federal de Educação, Ciência e Tecnologia Baiano"><a href=https://ifbaiano.edu.br>IF Baiano</abbr></a> - Conclusão Prevista: 2028</p>
 <hr>
         
 <h4>Habilidades e Competências</h4>
@@ -49,7 +49,7 @@
    </ul>
 <! Fim dos Marcadores>
 
-<p><a href=http://unicesumar.edu.br>UniCesumar</a> (Concluídos em 05/25)</p>
+<p><a href=https://unicesumar.edu.br>UniCesumar</a> (Concluídos em 05/25)</p>
 <! Início dos Marcadores>
     <ul type=circle>
         <li>Logística e Distribuição - Carga horária: 12h
@@ -59,7 +59,7 @@
          <li>Informática e Sistemas Operacionais - Carga horária: 10h</li>
    </ul>
 <! Fim dos Marcadores>
-<p>Inglês - Comunidade Taizé de Alagoinhas - Carga horária: 120h - Conclusão: 11/24</p>
+<p>Inglês - <a href=https://instagram/Taizebrasil>Comunidade Taizé de Alagoinhas</a> - Carga horária: 120h - Conclusão: 11/24</p>
  
 <! Fim do Corpo da Página>
 </body>
