--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 <! Início do Corpo da Página>
  
        <body>
-        <img src=ft.jpeg width="12%" align=right>
-<h1 align=center>Deivid Almeida da Conceição</h1>
+ <headear>       <img src=ft.jpeg width="12%" align="right">
+<h1 align="center">Deivid Almeida da Conceição</h1>
 <h4>Dados Pessoais</h4>
-<p> Endereço: Santa Terezinha, Alagoinhas - BA <br>Telefone: <a href=https://wa.me/5575982231992>+55 (75) 9 8223-1992</a> <br>E-mail: <a href="mailto:adm.deividalmeida@gmail.com">adm.deividalmeida@gmail.com </a>
-</p>
+<p> Endereço: Santa Terezinha, Alagoinhas - BA <br>Telefone: <a href="https://wa.me/5575982231992" target="_blank">+55 (75) 9 8223-1992</a> <br>E-mail: <a href="mailto:adm.deividalmeida@gmail.com">adm.deividalmeida@gmail.com </a>
+</p> </headear>
 <hr>
-<h4>Objetivo Profissional</h4>
+
+  <main>      
+        <h4>Objetivo Profissional</h4>
 <p>Graduando em Administração, buscando oportunidades para atuar e adquirir experiência na área, comprometido a contribuir de forma positiva com as metas e resultados da empresa.</p>
 <hr>      
 <h4>Formação Acadêmica</h4>
-<p>Bacharelado em Administração (Cursando) - <abbr title="Instituto Federal de Educação, Ciência e Tecnologia Baiano"><a href=https://ifbaiano.edu.br>IF Baiano</abbr></a> - Conclusão Prevista: 2028</p>
+<p>Bacharelado em Administração (Cursando) - <abbr title="Instituto Federal de Educação, Ciência e Tecnologia Baiano"><a href="https://ifbaiano.edu.br" target="_blank">IFBaiano</abbr></a> - Conclusão Prevista: 2028</p>
 <hr>
         
 <h4>Habilidades e Competências</h4>
@@ -37,10 +39,10 @@
 <! Fim dos Marcadores>
         <hr>
  <h4>Cursos e Certificações Complementares</h4>
- <p><a href=https://portal.uniasselvi.com.br>UNIASSELVI</a> (Concluídos em 05/25)</p>
+ <p><a href="https://portal.uniasselvi.com.br" target="_blank">UNIASSELVI</a> (Concluídos em 05/25)</p>
  
  <! Início dos Marcadores>
-<ul type=circle>
+<ul type=""circle">
         <li>Assistente Administrativo - Carga horária: 12
         <li>Gestão de Estoque - Carga horária: 10h
         <li>Empreendedorismo - Carga horária: 12h
@@ -49,9 +51,9 @@
    </ul>
 <! Fim dos Marcadores>
 
-<p><a href=https://unicesumar.edu.br>UniCesumar</a> (Concluídos em 05/25)</p>
+<p><a href="https://unicesumar.edu.br" target="_blank">UniCesumar</a> (Concluídos em 05/25)</p>
 <! Início dos Marcadores>
-    <ul type=circle>
+    <ul type="circle">
         <li>Logística e Distribuição - Carga horária: 12h
         <li>Gestão de Pessoas - Carga horária: 10h
         <li>Desenvolvimento de Sistemas Web - Carga horária: 10h
@@ -59,8 +61,8 @@
          <li>Informática e Sistemas Operacionais - Carga horária: 10h</li>
    </ul>
 <! Fim dos Marcadores>
-<p>Inglês - <a href=https://instagram/Taizebrasil>Comunidade Taizé de Alagoinhas</a> - Carga horária: 120h - Conclusão: 11/24</p>
- 
+<p>Inglês - <a href="https://instagram/Taizebrasil" target="_blank">Comunidade Taizé de Alagoinhas</a> - Carga horária: 120h - Conclusão: 11/24</p>
+ </main>
 <! Fim do Corpo da Página>
 </body>
 </html>
