--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    </ul>
 <! Fim dos Marcadores>
 
-<p><a href="https://unicesumar.edu.br" target="_blank">UniCesumar</a> (Concluídos em 05/25)</p>
+<p><a href="https://www.unicesumar.edu.br" target="_blank">UniCesumar</a> (Concluídos em 05/25)</p>
 <! Início dos Marcadores>
     <ul type="circle">
         <li>Logística e Distribuição - Carga horária: 12h
@@ -61,7 +61,7 @@
          <li>Informática e Sistemas Operacionais - Carga horária: 10h</li>
    </ul>
 <! Fim dos Marcadores>
-<p>Inglês - <a href="https://instagram/Taizebrasil" target="_blank">Comunidade Taizé de Alagoinhas</a> - Carga horária: 120h - Conclusão: 11/24</p>
+<p>Inglês - <a href="https://instagram.com/Taizebrasil" target="_blank">Comunidade Taizé de Alagoinhas</a> - Carga horária: 120h - Conclusão: 11/24</p>
  </main>
 <! Fim do Corpo da Página>
 </body>
