--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  <p><a href="https://portal.uniasselvi.com.br" target="_blank">UNIASSELVI</a> (Concluídos em 05/25)</p>
  
  <! Início dos Marcadores>
-<ul type=""circle">
+<ul type="circle">
         <li>Assistente Administrativo - Carga horária: 12
         <li>Gestão de Estoque - Carga horária: 10h
         <li>Empreendedorismo - Carga horária: 12h
