--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
          <li>Informática e Sistemas Operacionais - Carga horária: 10h</li>
    </ul>
 <! Fim dos Marcadores>
-<p>Inglês - <a href="https://instagram.com/Taizebrasil" target="_blank">Comunidade Taizé de Alagoinhas</a> - Carga horária: 120h - Conclusão: 11/24</p>
+<p><a href="https://instagram.com/Taizebrasil" target="_blank">Comunidade Taizé de Alagoinhas</a> - Conclusão: 11/24</p>
+   <! Início dos Marcadores>
+    <ul type="circle">
+         <li>Inglês - Carga horária: 120h</li>
+   </ul>
+<! Fim dos Marcadores>
  </main>
 <! Fim do Corpo da Página>
 </body>
