--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <! Início do Corpo da Página>
  
        <body>
- <headear>       <img src=ft.jpeg width="12%" align="right">
+ <headear>       <img src=ft.jpeg width="12%" height="15%" align="right">
 <h1 align="center">Deivid Almeida da Conceição</h1>
 <h4>Dados Pessoais</h4>
 <p> Endereço: Santa Terezinha, Alagoinhas - BA <br>Telefone: <a href="https://wa.me/5575982231992" target="_blank">+55 (75) 9 8223-1992</a> <br>E-mail: <a href="mailto:adm.deividalmeida@gmail.com">adm.deividalmeida@gmail.com </a>
@@ -61,7 +61,7 @@
          <li>Informática e Sistemas Operacionais - Carga horária: 10h</li>
    </ul>
 <! Fim dos Marcadores>
-<p><a href="https://instagram.com/Taizebrasil" target="_blank">Comunidade Taizé de Alagoinhas</a> - Conclusão: 11/24</p>
+<p><a href="https://instagram.com/Taizebrasil" target="_blank">Comunidade Taizé de Alagoinhas</a> (Conclusão: 11/24)</p>
    <! Início dos Marcadores>
     <ul type="circle">
          <li>Inglês - Carga horária: 120h</li>
